--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Lista de Publicaciones</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="goToCreatePublication()">Crear</ion-button>
+      <ion-button (click)="goToCreatePublicacion()">Crear</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -11,8 +11,9 @@
   <ion-list>
     <ion-item *ngFor="let publicacion of publicaciones; let i = index">
       <ion-label>
-        <h2>{{ publicacion.title }}</h2>
-        <p>{{ publicacion.description }}</p>
+        <h2>{{ publicacion.titulo }}</h2>
+        <p>{{ publicacion.contenido }}</p>
+        <p>{{ publicacion.fecha | date: 'dd/MM/yyyy' }}</p>
       </ion-label>
       <ion-buttons slot="end">
         <ion-button color="danger" (click)="confirmDelete(publicacion)">
